--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <div class="footer-direita">
                 <h3>Redes Sociais</h3>
-                <div class="linkssociais">
+                <div class="social-icons">
                     <a href="https://www.instagram.com/" target="_blank">Instagram</a>
                     <a href="https://www.whatsapp.com/?lang=pt_BR" target="_blank">WhatsApp</a>
                 </div>
